Blog - Adventskalender - 2025 - Day 03 - Detail Dialog
small refactorings and cleanings